--- a/AtO_Multiplayer.csproj
+++ b/AtO_Multiplayer.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net48</TargetFramework>
     <AssemblyName>AtO_Multiplayer</AssemblyName>
-    <Description>Across the Obelisk Card Loader</Description>
+    <Description>Across the Obelisk  Multiplayer</Description>
     <Version>1.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
